--- a/local/templates/landing/assets/styles/main.css
+++ b/local/templates/landing/assets/styles/main.css
@@ -78,7 +78,7 @@ a{
 }
 body{
     overflow-x: hidden;
-    margin: 0px;
+    margin: 0;
     box-sizing: border-box;
     height: 100%;
     width: 100%;
@@ -176,7 +176,7 @@ body{
     .NB_search_help_item {
         display: flex;
         transition: background-color 0.3s ease, color 0.3s;
-        margin-bottom: 0px;
+        margin-bottom: 0;
         padding-top: 10px;
         padding-bottom: 10px;
         padding-left: 30px;
@@ -204,7 +204,7 @@ body{
     }
     .NB_search_input:focus{
         background: none;
-        border: 0px;
+        border: 0;
         box-shadow: none;
     }
     .NB_search_input_color{
@@ -427,7 +427,7 @@ body{
     mark{
         background: none;
         color: #00AF57;
-        padding: 0px;
+        padding: 0;
 
     }
     .NB_about_left{
@@ -475,7 +475,7 @@ body{
     }
     .NB_about_content_wrap_item_p, .NB_about_content_wrap_item_p mark{
         white-space: pre-wrap;
-        margin-bottom: 0px;
+        margin-bottom: 0;
         
     } 
 
@@ -630,7 +630,7 @@ body{
     text-decoration: none;
     color: black;
     background-color: white;
-    box-shadow: 0 0px 0px white;
+    box-shadow: 0 0 0 white;
     transition: box-shadow 0.3s;
     cursor: pointer;
 
@@ -638,7 +638,7 @@ body{
 .NB_content_department_a:hover{
     text-decoration: none;
     color: black;
-    box-shadow: 0px 0px 15px rgba(250, 250, 250, 0.668);
+    box-shadow: 0 0 15px rgba(250, 250, 250, 0.668);
 
     
 }
@@ -649,8 +649,8 @@ body{
     height: 470px;
     background-repeat: no-repeat;
     background-size: cover;
-    bottom: 0px;
-    right: 0px;
+    bottom: 0;
+    right: 0;
 
 
 }
@@ -766,12 +766,12 @@ body{
     background-color: #ffffff33;
     width: 128px;
     height: 56px;
-    box-shadow: inset -1px -3px 10.3px rgba(0, 0, 0, 0.04), inset 2px 0px 4px #FFFFFF, inset 0px 3px 11px rgba(0, 0, 0, 0.11);
+    box-shadow: inset -1px -3px 10.3px rgba(0, 0, 0, 0.04), inset 2px 0 4px #FFFFFF, inset 0 3px 11px rgba(0, 0, 0, 0.11);
     transition: box-shadow 0.3s;
     
 }
 .NB_content_community_a:hover, .NB_content_tradition_menu_item:hover{
-    box-shadow: inset 0px 0px 10px rgba(250, 250, 250, 0.668), inset 2px 0px 4px #FFFFFF, inset 0px 3px 11px rgba(0, 0, 0, 0.11);
+    box-shadow: inset 0 0 10px rgba(250, 250, 250, 0.668), inset 2px 0 4px #FFFFFF, inset 0 3px 11px rgba(0, 0, 0, 0.11);
 
 }
 
@@ -805,7 +805,7 @@ body{
 }
 .NB_content_community_img_right{
 
-    right: 0px;
+    right: 0;
     bottom: -30px;
 }
 /*-----------------------*/
@@ -859,7 +859,7 @@ body{
 
 .NB_content_card_item_p {
     margin-top: 60px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 .NB_content_card_item_sub{
     margin-top: 25px;
@@ -887,7 +887,7 @@ body{
     background-color: #3F648F;
 }
 .NB_content_card_item_subscribe a{
-    margin-bottom: 0px;
+    margin-bottom: 0;
     margin-right: 10px;
     margin-left: 10px;
 }
@@ -1036,19 +1036,25 @@ body{
     padding-bottom: 40px;
 
 }
-
-.NB_modal_item_item{
+.NB_modal_item_text *{
+    color: white;
+    text-align: justify;
+    word-wrap: break-word;
+}
+.NB_modal_item_item, .NB_modal_item_text{
+    width: 70%;
     display: flex;
     overflow: auto;
     scrollbar-width: none; 
     -ms-overflow-style: none; 
 }
-.NB_modal_item_item::-webkit-scrollbar {
+.NB_modal_item_item::-webkit-scrollbar, .NB_modal_item_text::-webkit-scrollbar {
     width: 0;
     height: 0;
     background: transparent;
     display: none;
 }
+
     
 .NB_modal_item_X{
     top: 50px;
@@ -1068,8 +1074,17 @@ body{
 .NB_modal_form{
     width: 100%;
 }
-.NB_modal_item h4,.NB_modal_item_footer, .NB_modal_item_p, .NB_modal_input_form_input, .NB_modal_input_form_button, .NB_modal_gradient{
-    width: 70%;
+.NB_modal_input_form_button, .NB_modal_gradient{
+    width: 100%;
+}
+.NB_modal_struct{
+    width: 100%;
+    height: 100%;
+}
+.NB_modal_struct img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .NB_modal_input_form_input{
@@ -1091,11 +1106,11 @@ body{
 .NB_modal_input_form_input:focus{
     border: 1px solid white;
     background: none;
-    box-shadow: 0px 0px 12px 0px rgba(255, 255, 255, 0.7);
+    box-shadow: 0 0 12px 0 rgba(255, 255, 255, 0.7);
     color: white;
 }
 .NB_modal_input_form_input:hover{
-    box-shadow: 0px 0px 12px 0px rgba(255, 255, 255, 0.7);
+    box-shadow: 0 0 12px 0 rgba(255, 255, 255, 0.7);
 
 }
 .NB_modal_input_form_button{
@@ -1106,7 +1121,7 @@ body{
     border-radius: 20px;
     z-index: 1000;
     cursor: pointer;
-    border: 0px;
+    border: 0;
 }
 .NB_modal_gradient{
     position: relative;
@@ -1114,7 +1129,7 @@ body{
     border-radius: 20px;
 }
 .NB_modal_gradient_item{
-    border: 0px;
+    border: 0;
     position:absolute;
     color: white;
     height: 52px;
@@ -1150,10 +1165,12 @@ body{
     text-align: center;
     color: white;
     margin-top: 25px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 .NB_modal_item_p{
-    margin-bottom: 0px;
+    margin-bottom: 0;
     color: white;
     text-align: center;
 }
@@ -1207,7 +1224,7 @@ body{
         width: 330px;
     }
     .NB_avatar{
-        margin-right: 0px;
+        margin-right: 0;
     }
     .NB_corner_p{
         width: 450px;
@@ -1374,7 +1391,7 @@ body{
         height: 30px;
     }
     .NB_right{
-        margin-right: 0px;
+        margin-right: 0;
     }
     .NB_avatar span{
         max-width: 150px;
@@ -1792,7 +1809,7 @@ body{
         width: 800px;
     }
     .NB_search{
-        margin-right: 0px;
+        margin-right: 0;
     }
     .NB_search_size{
         width: 250px;
@@ -1808,7 +1825,7 @@ body{
         width: 400px;
     }
     .NB_avatar{
-        margin-left: 0px;
+        margin-left: 0;
     }
     .NB_avatar span{
         max-width: 125px;
@@ -1928,6 +1945,9 @@ body{
     }
     .NB_modal_gradient{
         margin-top: 15px;
+    }
+    .NB_modal_item_footer{
+        margin-top: 10px;
     }
 }
 
