--- a/local/templates/landing/assets/styles/common.css
+++ b/local/templates/landing/assets/styles/common.css
@@ -386,8 +386,8 @@
     padding-top: 40px;
 }
 .NB2_bonusInfo_right > div{
-    width: 100%;
     height: 100%;
+    width: 83%;
     display: flex;
     flex-direction: column;
     -webkit-box-pack: justify;
@@ -395,12 +395,17 @@
     justify-content: space-between ;
     -webkit-box-align: center ;
     -ms-flex-align: center;
-    align-items: center;
 }
+.NB2_bonusInfo_right .NB2_bonusInfo_right_item{
+    width: 83%;
+}
+.NB2_bonusInfo_right > div .NB2_bonusInfo_right_item{
+    width: 100%;
+}
+
 .NB2_bonusInfo_right_item {
     overflow: hidden;
     position: relative;
-    width: 83%;
     height: 50%;
 }
 .NB2_bonusInfo_right_item_ico {
