теперь работа будет происходить на докере битрикс24. реализована аватарка в профиле

--- a/local/templates/landing/assets/styles/main.css
+++ b/local/templates/landing/assets/styles/main.css
@@ -108,7 +108,7 @@ mark{background: none; color: #00AF57; padding: 0;}
 .NB_about_content_title {width: 710px; margin-left: 150px; margin-bottom: 25px;}
 .NB_about_content_title_title{margin-bottom: 20px;}
 .NB_about_content_main {margin-left: 150px;}
-.NB_about_content_wrap {max-width: 700px; height: auto; background: url("../img/эллипс.png"); background-size: cover; background-position-x: center; padding-bottom: 60px;}
+.NB_about_content_wrap {max-width: 700px; height: auto; background: url("../img/UIP_о нас/эллипс.png"); background-size: cover; background-position-x: center; padding-bottom: 60px;}
 .NB_about_content_wrap_item {min-width: 200px; height: 200px;}
 .NB_about_content_wrap_item_img {width: 140px;}
 .NB_about_content_wrap_item_p,
