Задачи матвея: 1. ссылка на шаблоны переходят к баннеру (в поиске тоже) (поменяй html код) - ==готово== 2. После закрытия модального окна с формой сбрасываются и можно заново заполнить (добавить в функцию закрытия модального окна) - ==готово== Общие задачи к формам: 1. сформировать нормальные, настоящие формы: 	1. Обратная связь (смарт-процесс, бизнес-процесс, форма) - ==готово== доделать форму задача: 1. Создать БП и Смарт-процесс (спросить HR про обязательное ИМЯ и более подробно за задачи) - ==готово== 2. создать задачу - ==готово== 3. отступ для лейбла - ==готово== Косяк: 1. в шаблонах аватарок есть лишние строки для переадресации. ==готово== Задачи: 1. поменять аватарку бетмена на нормальную дефолтную (проверить, как это вообще работает). ==готово== 2. Сделать ==title== страниц с заглавной буквы - ==готово==

--- a/local/templates/landing/assets/styles/common.css
+++ b/local/templates/landing/assets/styles/common.css
@@ -742,9 +742,15 @@
     width: 100%;
     padding-left: 40px !important;
     padding-right: 150px !important;
-
 }
-
+.b24-form-control-container:has(textarea) .b24-form-control-label{
+    padding-right: 150px !important;
+    white-space: normal;
+    word-wrap: normal;
+    word-break: normal;
+    height: auto;
+    line-height: 1.15;
+}
 .NB3_banner_form_input::placeholder, .NB3_banner_form_text::placeholder {
     color: rgba(255, 255, 255, 0.7);
 }
