перенос включаемых областей в инфоблоки

--- a/local/templates/landing/assets/styles/main.css
+++ b/local/templates/landing/assets/styles/main.css
@@ -814,7 +814,9 @@ mark {
     width: 700px;
     align-self: center;
 }
-
+.NB_content_tradition_footer .Fbody{
+    text-align: center;
+}
 .NB_content_tradition_footer_link {
     position: relative;
     height: 100px;
