сделал возможность спрятать кнопку и баннер, где упоминается меркет, структурировал docs_base, сделал зеленую кнопку в форме обратной связи

--- a/local/templates/landing/assets/styles/common.css
+++ b/local/templates/landing/assets/styles/common.css
@@ -835,7 +835,7 @@
 
 }
 
-.NB3_banner_form .b24-form-btn-block {
+.NB3_banner_form .b24-form-btn-block, .NB3_banner_form .b24-form-btn-container p {
     margin-top: 50px;
 }
 
@@ -1492,7 +1492,7 @@
         margin-bottom: 0;
     }
 
-    .NB3_banner_form .b24-form-btn-block {
+    .NB3_banner_form .b24-form-btn-block, .NB3_banner_form .b24-form-btn-container p {
         margin-top: 40px;
     }
 
