курсор для кнопки на баннере приветствия на /citystaff/

--- a/local/templates/landing/assets/styles/main.css
+++ b/local/templates/landing/assets/styles/main.css
@@ -466,6 +466,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .NB_corner-a {
+    cursor: pointer;
     position: absolute;
     left: 1500px;
     top: 70px;
